test/tests/stages/18_structures/invalid_parse/struct_member_storage_class.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[9]:
  struct
  identifier(y)
  {
  static
  int
  identifier(a)
  ;
  }
  ;
